--- a/index.html
+++ b/index.html
@@ -20,18 +20,6 @@
 			width: 100%;
 			height: 100%;
 			position: absolute;
-		}
-.embed {
-    position: absolute;
-    background: none;
-    top: 2px;
-    z-index: 999;
-    color: aqua;
-    font-family: sans-serif;
-    font-size: 18px;
-    border: 0;
-    font-weight: 600;
-    right: 10px;
 }
 	</style>
 	<script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js">
@@ -51,6 +39,29 @@ src="${location.href}?id=${eid}"
 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
 gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
+          `;
+          prompt('Here is Your Embed Code :- ',embed);
+          window.location.href = window.location.href+'?id='+eid;
+        }
+        video = getParameterByName('id') ;
+        if(getParameterByName('ib')){
+            video = btoa(getParameterByName('ib'));
+        }
+        var vidurl = "https://www.googleapis.com/drive/v3/files/"+video+"?alt=media&key="+apikey;
+        document.write("<video controls id='video' src="+vidurl+"></video>");
+
+
+function getembed(){
+            var code = `
+<iframe width="560" height="315"
+scrolling="no"
+src="${location.href}?id=${video}"
+frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+          `;
+          prompt('Here is Your Embed Code :- ',code);
+}
 
 function getParameterByName(name, url = window.location.href) {
     name = name.replace(/[\[\]]/g, '\\$&');
@@ -79,9 +90,9 @@ function getParameterByName(name, url = window.location.href) {
 		},
 		"autoPlay": false,
 		"mute": false,
-		"allowTheatre": false,
+		"allowTheatre": true,
 		"playPauseAnimation": true,
-		"playbackRateEnabled": true,
+		"playbackRateEnabled": false,
 		"allowDownload": false,
 		"playButtonShowing": true,
 		"fillToContainer": false,
